--- a/functions/functions_(nice).ipynb
+++ b/functions/functions_(nice).ipynb
@@ -395,8 +395,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Your code here\n"
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01bafa96",
+   "metadata": {},
+   "source": [
+    "|**Exception**|**Description**|\n",
+    "|:---|---:|\n",
+    "|`AssertionError`|Raised when the assert statement fails|\n",
+    "|`AttributeError`|Raised one th attribute assignment or reference fails|\n",
+    "|`EOFError`|Raised when the input() function hist the end-of-life condition|\n",
+    "|`FloatingPointError`|Raised when a floating point operation fails|\n",
+    "|`ImportError`|Raised when the imported module is not found|\n",
+    "|`IndexError`|Raised when the index of a sequences if out of range|\n",
+    "|`KeyError`|Raised when a key is not found in a dictionary|\n",
+    "|`NameError`|Raised when a variale is not found in the local or global scope|\n",
+    "|`OSError`|Raised when a system operation causes a system-related error|\n",
+    "|`OverflowError`|Raised when the resilt of an arithmetic operation is too large to be represented|\n",
+    "|`RuntimeError`|Raised when an error does not fall under any other category|\n",
+    "|`SyntaxError`|Raised by the parser when a syntax error is encountered|\n",
+    "|`IndentationError`|Raised when there is an incorrect indentation or an extra indentation|\n",
+    "|`SystemError`|Raised by the parser when a syntax error is encountered|\n",
+    "|`SysmtemExit`|Raised by the sys.exit() function|\n",
+    "|`TypeError`|Raised when a function or operation is applied to an object of an incorrect type|\n",
+    "|`UnboundLocalError`|Raised when a reference is made to a local variable in a function or method, but no value has been bound to that variable|\n",
+    "|`ValueError`|Raised when a function gets an argument of correct type but improper value|\n",
+    "|`ZeroDivisionError`|Raised when the second operand of a division or module operation is zero|"
    ]
   },
   {
@@ -424,6 +451,8 @@
    ],
    "source": [
     "# Your code here\n",
+    "# being more specific with the type of exception\n",
+    "\n",
     "try:\n",
     "    number=input(\"Give me a number and I will calculate its square.\")\n",
     "    square=int(number)**2\n",
@@ -458,6 +487,8 @@
    ],
    "source": [
     "# Your code here\n",
+    "# 'else' block runs only if everything works\n",
+    "\n",
     "try:\n",
     "    number=input(\"Give me a number and I will calculate its square.\")\n",
     "    square=int(number)**2\n",
@@ -477,11 +508,97 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8da5ce7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy and paste into a file called my_math.py\n",
+    "\n",
+    "def add(a,b):\n",
+    " return a+b\n",
+    "\n",
+    "def subtract(a,b):\n",
+    " return a-b\n",
+    "\n",
+    "def multiply(a,b):\n",
+    " return a*b\n",
+    "\n",
+    "def divide(a,b):\n",
+    " return a/b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aae45d3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import functions from this 'module'\n",
+    "# use either of following synatxes\n",
+    "\n",
+    "import my_math\n",
+    "my_math.add(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8be9a6a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from my_math import add as my_add\n",
+    "my_add(1, 2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6600d369",
    "metadata": {},
    "source": [
     "## Explore 2 :  Angles and trig functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7eff3c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'args' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m     result \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      7\u001b[0m     functions \u001b[38;5;241m=\u001b[39m kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfunctions\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, angle \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43margs\u001b[49m):\n\u001b[0;32m     10\u001b[0m         trig_function_value \u001b[38;5;241m=\u001b[39m functions[i](angle)\n\u001b[0;32m     11\u001b[0m         result\u001b[38;5;241m.\u001b[39mappend([angle, trig_function_value])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'args' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# function accepts angles\n",
+    "# list of funtions to produce a list [angles, tri function values]\n",
+    "# modify code below to accept angles in degrees\n",
+    "\n",
+    "def my_trig_function(*args, **kwargs):\n",
+    "    result = []\n",
+    "    functions = kwargs['functions']\n",
+    "    \n",
+    "for i, angle in enumerate(args):\n",
+    "        trig_function_value = functions[i](angle)\n",
+    "        result.append([angle, trig_function_value])\n",
+    "\n",
+    "return(result)\n",
+    "\n",
+    "# Using the function\n",
+    "my_trig_function(np.pi/2, np.pi, np.pi / 4,\n",
+    "                functions=[np.sin, np.cos, np.tan]\n",
+    "                )"
    ]
   }
  ],
