--- a/functions/functions_(nice).ipynb
+++ b/functions/functions_(nice).ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01bafa96",
+   "id": "037e25e2",
    "metadata": {},
    "source": [
     "|**Exception**|**Description**|\n",
@@ -509,32 +509,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8da5ce7a",
+   "execution_count": 83,
+   "id": "9dfd7bc2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# copy and paste into a file called my_math.py\n",
+    "# finally shoved this module into my file -.-\n",
     "\n",
-    "def add(a,b):\n",
-    " return a+b\n",
+    "    def add(a,b):\n",
+    "        return a + b\n",
     "\n",
-    "def subtract(a,b):\n",
-    " return a-b\n",
+    "    def subtract(a,b):\n",
+    "        return a - b\n",
     "\n",
-    "def multiply(a,b):\n",
-    " return a*b\n",
+    "    def multiply(a,b):\n",
+    "        return a * b\n",
     "\n",
-    "def divide(a,b):\n",
-    " return a/b"
+    "    def divide(a,b):\n",
+    "        return a / b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aae45d3f",
+   "execution_count": 88,
+   "id": "7723a7e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import functions from this 'module'\n",
     "# use either of following synatxes\n",
@@ -545,10 +557,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8be9a6a8",
+   "execution_count": 89,
+   "id": "6cab80c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from my_math import add as my_add\n",
     "my_add(1, 2)"
@@ -564,20 +587,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "7eff3c17",
+   "execution_count": 71,
+   "id": "872ee420",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'args' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m     result \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      7\u001b[0m     functions \u001b[38;5;241m=\u001b[39m kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfunctions\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, angle \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43margs\u001b[49m):\n\u001b[0;32m     10\u001b[0m         trig_function_value \u001b[38;5;241m=\u001b[39m functions[i](angle)\n\u001b[0;32m     11\u001b[0m         result\u001b[38;5;241m.\u001b[39mappend([angle, trig_function_value])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'args' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[[1.5707963267948966, 1.0],\n",
+       " [3.141592653589793, -1.0],\n",
+       " [0.7853981633974483, 0.9999999999999999]]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -585,20 +609,76 @@
     "# list of funtions to produce a list [angles, tri function values]\n",
     "# modify code below to accept angles in degrees\n",
     "\n",
+    "import math\n",
+    "\n",
     "def my_trig_function(*args, **kwargs):\n",
     "    result = []\n",
     "    functions = kwargs['functions']\n",
     "    \n",
-    "for i, angle in enumerate(args):\n",
+    "    for i, angle in enumerate(args):\n",
     "        trig_function_value = functions[i](angle)\n",
     "        result.append([angle, trig_function_value])\n",
     "\n",
-    "return(result)\n",
+    "    return(result)\n",
     "\n",
     "# Using the function\n",
-    "my_trig_function(np.pi/2, np.pi, np.pi / 4,\n",
-    "                functions=[np.sin, np.cos, np.tan]\n",
-    "                )"
+    "my_trig_function(np.pi / 2, np.pi, np.pi / 4,\n",
+    "                functions = [np.sin, np.cos, np.tan])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "fb69bedc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[90, 0.8939966636005579]]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_trig_function(90, functions = [np.sin])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "69ca7c60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[90.0, 0.8939966636005579]]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def my_trig_function(*args, **kwargs):\n",
+    "    result = []\n",
+    "    functions = kwargs['functions']\n",
+    "    \n",
+    "    for i, angle in enumerate(np.degrees(args)):\n",
+    "        trig_function_value = functions[i](angle)\n",
+    "        result.append([angle, trig_function_value])\n",
+    "\n",
+    "    return(result)\n",
+    "\n",
+    "my_trig_function(math.pi / 2, functions = [math.sin])\n",
+    "\n",
+    "# math.degree vs np.degree?\n",
+    "# sin(90) = 0.8939 as the 90 here is in radians"
    ]
   }
  ],
