--- a/Just Exercises (I)/just_exercises_(i).ipynb
+++ b/Just Exercises (I)/just_exercises_(i).ipynb
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "6d2a06b9",
+   "id": "de5c3750",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e95e539a",
+   "id": "b69e3ab7",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "756bd3a9",
+   "id": "59bfadf9",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a3b7817d",
+   "id": "ccb7c7a2",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "1d59fdec",
+   "id": "f77f1ff8",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "e961a70a",
+   "id": "e16efaf0",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "a5bae72c",
+   "id": "9d162ca2",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "c04c2c26",
+   "id": "949d391e",
    "metadata": {},
    "outputs": [
     {
@@ -471,6 +471,120 @@
     "print(answer)\n",
     "\n",
     "# err it worked? but do I need an f-string here?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "f62db7a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'pineapple', 'jackfruit', 'peach', 'durian', 'watermelon', 'mango', 'strawberry', 'passionfruit', ['dragon fruit', 'apricots', 'oranges']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# q4: include following in list\n",
+    "\n",
+    "fruits = [\"apple\", \"banana\", \"pineapple\", \"jackfruit\",\n",
+    "        \"peach\", \"durian\", \"watermelon\", \"mango\",\n",
+    "        \"strawberry\", \"passionfruit\"]\n",
+    "\n",
+    "new_fruits = [\"dragon fruit\", \"apricots\", \"oranges\"]\n",
+    "\n",
+    "fruits.append(new_fruits)\n",
+    "print(fruits)\n",
+    "\n",
+    "# lowkey thinks this is wrong :P\n",
+    "# appending another list will be a nested list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "e0593c58",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'pineapple', 'jackfruit', 'peach', 'durian', 'watermelon', 'mango', 'strawberry', 'passionfruit', 'dragon fruit', 'apricots', 'oranges']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"pineapple\", \"jackfruit\",\n",
+    "        \"peach\", \"durian\", \"watermelon\", \"mango\",\n",
+    "        \"strawberry\", \"passionfruit\"]\n",
+    "\n",
+    "new_fruits = [\"dragon fruit\", \"apricots\", \"oranges\"]\n",
+    "\n",
+    "fruits += new_fruits\n",
+    "print(fruits)\n",
+    "\n",
+    "# is this still considered 'append'?\n",
+    "# must the append() function still needs to be used?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "6fc664d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dragon fruit', 'apricots', 'oranges', 'apple', 'banana', 'pineapple', 'jackfruit', 'peach', 'durian', 'watermelon', 'mango', 'strawberry', 'passionfruit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prepending them\n",
+    "\n",
+    "fruits = [\"apple\", \"banana\", \"pineapple\", \"jackfruit\",\n",
+    "        \"peach\", \"durian\", \"watermelon\", \"mango\",\n",
+    "        \"strawberry\", \"passionfruit\"]\n",
+    "\n",
+    "new_fruits = [\"dragon fruit\", \"apricots\", \"oranges\"]\n",
+    "\n",
+    "fruits = new_fruits + fruits\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "aed6ad3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'pineapple', 'jackfruit', ['dragon fruit', 'apricots', 'oranges'], 'peach', 'durian', 'watermelon', 'mango', 'strawberry', 'passionfruit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"pineapple\", \"jackfruit\",\n",
+    "        \"peach\", \"durian\", \"watermelon\", \"mango\",\n",
+    "        \"strawberry\", \"passionfruit\"]\n",
+    "\n",
+    "new_fruits = [\"dragon fruit\", \"apricots\", \"oranges\"]\n",
+    "\n",
+    "fruits.insert(4, new_fruits)\n",
+    "print(fruits)\n",
+    "\n",
+    "# err nested list once again..."
    ]
   },
   {
