--- a/functions/functions_(need).ipynb
+++ b/functions/functions_(need).ipynb
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4e46e5b2",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9a57915b",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c57e4939",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "920f76fd",
    "metadata": {},
    "outputs": [],
@@ -699,14 +699,14 @@
     "# exit() or quit() to force stop python\n",
     "\n",
     "def divide(x, y):\n",
-    "    if y.all() == 0:\n",
+    "    if np.all(y < 2):\n",
     "        return exit()\n",
     "    return x / y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "fd07f06d",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
        "array([100, 100, 100, 100, 100])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "39ef562f",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,7 @@
        "array([-28, -32, -12,  52, -46])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "d289ca61",
    "metadata": {},
    "outputs": [
@@ -784,12 +784,22 @@
        "array([0.5625    , 0.51515152, 0.78571429, 3.16666667, 0.36986301])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([36, 34, 44, 76, 27])\n",
+    "y = np.array([64, 66, 56, 24, 73])\n",
+    "\n",
+    "def divide(x, y):\n",
+    "    if np.all(y < 0):\n",
+    "        return exit()\n",
+    "    return x / y\n",
+    "\n",
     "divide(x, y)"
    ]
   },
